adding a few new html files and links in index

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>            </h1>
     <h1>      </h1>
     <h1>         </h1>
-    <A HREF="homepage.html">Enter here!<img src="welcome.jpg"></A>
+    <A HREF="homepage.html">Enter here!</A>
   </body>
 </html>
 
