--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>            </h1>
     <h1>      </h1>
     <h1>         </h1>
-    <A HREF="homepage.html">Enter here!</A>
+    <A HREF=allisonrenie.github.io/"homepage.html">Enter here!</A>
   </body>
 </html>
 
