changes for capstone project, simpler style, resume

--- a/index.html
+++ b/index.html
@@ -3,57 +3,61 @@
   <head>
     <title>Allison Renie Thompson</title>
 
-    <link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
-    <link href='https://fonts.googleapis.com/css?family=VT323' rel='stylesheet'>
-    <link href='https://fonts.googleapis.com/css?family=Source Code Pro' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Lusitana' rel='stylesheet'>
 
     <style>
+
+      html
+      {
+        font-family: 'Lusitana', serif;
+      }
+
       body
       {
-          font-family: 'Source Code Pro';
-          /* font-size: 60px; */
           text-align: center;
           padding-left: 400px;
           padding-right: 400px;
-          background-image: url("graphpaper.jpg");
       }
+
+      .link
+      {
+        font-size: 26px;
+      }
+
       #name
       {
-        font-family: 'VT323';
         font-size: 50px;
       }
+
       #header
       {
-        font-size: 40px;
-        font-family: 'VT323';
+        font-size: 30px;
       }
+
       #para
       {
-        font-size: 16px;
+        font-size: 18px;
         text-align: center;
-        /* height: 100px;
-        width: 500px;
-        margin-bottom: 10;
-        padding-bottom: 100px; */
-        /* padding-left: 680px;
-        padding-right: 500px; */
       }
+
       #skills
       {
         font-size: 16px;
         text-align: left;
-        /* padding-top: 100px; */
       }
+
       #skillheader
       {
         font-size: 22px;
         font-style: italic;
         font-weight: bold;
       }
+
       #listitem
       {
         font-size: 16px;
       }
+
       #projecttitle
       {
         font-size: 22px;
@@ -61,6 +65,7 @@
         font-style: italic;
         font-weight: bold;
       }
+
       #projectdesc
       {
         font-size: 16px;
@@ -74,11 +79,15 @@
 
     <p id="name"> Allison Renie Thompson </p>
 
+    <a class="link" href="Resume.pdf">PDF of my resume</a>
+    <p></p>
+    <a class="link"href="https://www.linkedin.com/in/allison-thompson-182891249/">My LinkedIn profile</a>
+
     <p id="header"> About me </p>
     <p id="para"> Hi! I am currently pursuing an Honors Bachelor of Science in Computer Science at Oregon State University
       with an applied option in Simulation and Game Programming. I have a 3.88 GPA. I'm going to graduate in Spring 2023.
-      I graduated valedictorian from Hood River Valley High School with a 4.0 GPA in 2019. Currently, I work for for Oregon
-      State University as a Undergraduate Learning Assistant (ULA) for ENGR100, where I help run studio sessions and help
+      I graduated valedictorian from Hood River Valley High School with a 4.0 GPA in 2019. Currently, I work for Oregon
+      State University as a Undergraduate Learning Assistant (ULA) for ENGR100, where I help run studio sessions and work with
       students through labs and problems. </p>
 
     <p id="header"> Interests </p>
@@ -95,7 +104,6 @@
           <li id="listitem"> C/C++ </li>
           <li id="listitem"> OpenGL and GLSL </li>
           <li id="listitem"> Git and GitHub </li>
-          <li id="listitem"> Blender </li>
           <li id="listitem"> Working in a Linux environment </li>
           <li id="listitem"> Writing </li>
         </ul>
@@ -105,6 +113,8 @@
           <li id="listitem"> Python, Java, HTML, CSS, JavaScript, R, Rust, MASM </li>
           <li id="listitem"> Krita </li>
           <li id="listitem"> GIMP </li>
+          <li id="listitem"> Blender </li>
+          <li id="listitem"> Unreal Engine 5 </li>
         </ul>
     </div>
 
@@ -117,7 +127,7 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/9jpkpsxIUgY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
       <p id="projecttitle"> Moss shader </p>
-      <p id="projectdesc"> AKA the Mossifier. Programmed a moss shader using GLSL and OpenGL. Esentially puts a moss-like texture onto any OBJ file loaded into the program.
+      <p id="projectdesc"> AKA the Mossifier. Programmed a moss shader using GLSL and OpenGL. Esentially, it puts a moss-like texture onto any OBJ file loaded into the program.
         There are a few options to the moss shader, inlcuding a few moss patterns generated using noise. The background textures have normal mapping.
         This was a class project for CS457 (Computer Graphics Shaders). </p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/Yx2YmisxWpo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
