--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
     <p id="name"> Allison Renie Thompson </p>
 
-    <a class="link" href="Resume.pdf">PDF of my resume</a>
+    <a class="link" href="Resume_winter_2023_AllisonThompson.pdf">PDF of my resume</a>
     <p></p>
     <a class="link"href="https://www.linkedin.com/in/allison-thompson-182891249/">My LinkedIn profile</a>
 
