a few changes to about me section and such

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <p id="header"> About me </p>
     <p id="para"> Hi! I am currently pursuing an Honors Bachelor of Science in Computer Science at Oregon State University
-      with an applied option in Simulation and Game Programming. I have a 3.88 GPA. I'm going to graduate in Spring 2023.
+      with an applied option in Simulation and Game Programming. I have a 3.86 GPA. I'm going to graduate in Spring 2023.
       I graduated valedictorian from Hood River Valley High School with a 4.0 GPA in 2019. Currently, I work for Oregon
       State University as a Undergraduate Learning Assistant (ULA) for ENGR100, where I help run studio sessions and work with
       students through labs and problems. </p>
@@ -94,7 +94,7 @@
     <p id="para"> I'm intersted in graphics, physics, simulations, robotics, and where art and computer science meet.
     I am most interested in backend graphics, especially when they relate to the real world or real world physics.
     I am also very interested in the natural world and how to replicate it using computer graphics. Outside of computer
-    science, I enjoy sewing, reading, video games (The Witcher 3, Fortnite), hiking, drawing, and cooking.  </p>
+    science, I enjoy sewing, reading, video games (The Witcher 3, Fortnite), hiking, drawing, and learning.  </p>
 
 
     <p id="header"> Skills </p>
@@ -110,11 +110,12 @@
       <p id="skillheader"> Skills I have some experience in: </p>
         <ul>
           <li id="listitem"> OpenMp, SIMD, CUDA, OpenCL </li>
+          <li id="listitem"> Vulkan </li>
           <li id="listitem"> Python, Java, HTML, CSS, JavaScript, R, Rust, MASM </li>
           <li id="listitem"> Krita </li>
           <li id="listitem"> GIMP </li>
           <li id="listitem"> Blender </li>
-          <li id="listitem"> Unreal Engine 5 </li>
+          <li id="listitem"> Unreal Engine 5 (self taught from internet)</li>
         </ul>
     </div>
 
