small changes to about me again

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
     <p id="para"> Hi! I am currently pursuing an Honors Bachelor of Science in Computer Science at Oregon State University
       with an applied option in Simulation and Game Programming. I have a 3.86 GPA. I'm going to graduate in Spring 2023.
       I graduated valedictorian from Hood River Valley High School with a 4.0 GPA in 2019. Currently, I work for Oregon
-      State University as a Undergraduate Learning Assistant (ULA) for ENGR100, where I help run studio sessions and work with
-      students through labs and problems. </p>
+      State University as a Undergraduate Learning Assistant (ULA) for ENGR102, where I help run studio sessions and work with
+      students through labs and problems. I have also previously been a ULA for ENGR100. </p>
 
     <p id="header"> Interests </p>
     <p id="para"> I'm intersted in graphics, physics, simulations, robotics, and where art and computer science meet.
