minor tweaks, font change, slightly updated resume

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <title>Allison Renie Thompson</title>
 
-    <link href='https://fonts.googleapis.com/css?family=Lusitana' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet'>
 
     <style>
 
       html
       {
-        font-family: 'Lusitana', serif;
+        font-family: 'Vollkorn', serif;
       }
 
       body
@@ -26,7 +26,7 @@
 
       #name
       {
-        font-size: 50px;
+        font-size: 42px;
       }
 
       #header
@@ -37,7 +37,7 @@
       #para
       {
         font-size: 18px;
-        text-align: center;
+        text-align: left;
       }
 
       #skills
@@ -79,13 +79,13 @@
 
     <p id="name"> Allison Renie Thompson </p>
 
-    <a class="link" href="Resume_winter_2023_AllisonThompson.pdf">PDF of my resume</a>
+    <a class="link" href="resume_feb_23.pdf">PDF of my resume</a>
     <p></p>
     <a class="link"href="https://www.linkedin.com/in/allison-thompson-182891249/">My LinkedIn profile</a>
 
     <p id="header"> About me </p>
     <p id="para"> Hi! I am currently pursuing an Honors Bachelor of Science in Computer Science at Oregon State University
-      with an applied option in Simulation and Game Programming. I have a 3.86 GPA. I'm going to graduate in Spring 2023.
+      with an applied option in Simulation and Game Programming and a minor in English. I have a 3.86 GPA. I'm going to graduate in June of 2023.
       I graduated valedictorian from Hood River Valley High School with a 4.0 GPA in 2019. Currently, I work for Oregon
       State University as a Undergraduate Learning Assistant (ULA) for ENGR102, where I help run studio sessions and work with
       students through labs and problems. I have also previously been a ULA for ENGR100. </p>
@@ -94,7 +94,7 @@
     <p id="para"> I'm intersted in graphics, physics, simulations, robotics, and where art and computer science meet.
     I am most interested in backend graphics, especially when they relate to the real world or real world physics.
     I am also very interested in the natural world and how to replicate it using computer graphics. Outside of computer
-    science, I enjoy sewing, reading, video games (The Witcher 3, Fortnite), hiking, drawing, and learning.  </p>
+    science, I enjoy reading, sewing, video games (The Witcher 3, Fortnite, Castlevania: Symphony of the Night), hiking, drawing, and learning.  </p>
 
 
     <p id="header"> Skills </p>
@@ -105,17 +105,18 @@
           <li id="listitem"> OpenGL and GLSL </li>
           <li id="listitem"> Git and GitHub </li>
           <li id="listitem"> Working in a Linux environment </li>
-          <li id="listitem"> Writing </li>
+          <li id="listitem"> Writing and communication </li>
         </ul>
       <p id="skillheader"> Skills I have some experience in: </p>
         <ul>
-          <li id="listitem"> OpenMp, SIMD, CUDA, OpenCL </li>
+          <li id="listitem"> OpenMP, SIMD, CUDA, OpenCL </li>
           <li id="listitem"> Vulkan </li>
           <li id="listitem"> Python, Java, HTML, CSS, JavaScript, R, Rust, MASM </li>
           <li id="listitem"> Krita </li>
           <li id="listitem"> GIMP </li>
           <li id="listitem"> Blender </li>
-          <li id="listitem"> Unreal Engine 5 (self taught from internet)</li>
+          <li id="listitem"> Bevy </li>
+          <li id="listitem"> Unreal Engine 5 basics, self taught from the internet </li>
         </ul>
     </div>
 
@@ -123,8 +124,8 @@
       <p id="header"> Projects </p>
       <p id="projecttitle"> Forest builder </p>
       <p id="projectdesc"> Programmed a basic forest creation program in OpenGL. Allows user to place randomly generated
-        trees on a plane, then view those trees from an overhead view or a walk-through view. This was a class project
-        for CS450 (Intro to Computer Graphics).</p>
+        trees on a plane, then view those trees from an overhead view or a walk-through view. The tree models are some of the first models I ever made in Blender, which is why they
+        look... interesting. This was a class project for CS450 (Intro to Computer Graphics).</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/9jpkpsxIUgY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
       <p id="projecttitle"> Moss shader </p>
