some minor changes and first blog post.

--- a/aboutme.html
+++ b/aboutme.html
@@ -37,6 +37,7 @@
       <ul>
           <li id="listitem"> OpenMP, SIMD, CUDA, OpenCL </li>
           <li id="listitem"> Vulkan </li>
+          <li id="listitem"> Linear algebra (matrix math, vectors, eigenvalues/eigenvectors) </li>
           <li id="listitem"> Rust (learning more now!), Python, Java, HTML, CSS, JavaScript, R, MASM </li>
           <li id="listitem"> Krita </li>
           <li id="listitem"> GIMP </li>
@@ -48,11 +49,12 @@
 
   <!-- More links to my other info -->
   <p id="header"> More links </p>
-  <a class="list-link" href="https://github.com/allisonrenie">Github</a>
+  <p class="left-align"><a class="list-link" href="https://github.com/allisonrenie">Github</a></p>
   <p></p>
-  <a class="list-link" href="https://www.linkedin.com/in/allison-thompson-182891249/">LinkedIn Profile</a>
+  <p class="left-align"><a class="list-link" href="https://www.linkedin.com/in/allison-thompson-182891249/">LinkedIn Profile</a></p>
 
   <!-- Link back to main page -->
   <p></p>
   <a class="menu-link" href="index.html">Back home</a>
+  <hr class="horizontal-line">
 </html>
