--- a/blog.html
+++ b/blog.html
@@ -9,9 +9,27 @@
   </head>
 
   <p id="page-title"> Current project: ASCII terminal renderer </p>
+  <p id="about-project">I'm creating a Rust program that renders an OBJ file in the terminal
+    using ASCII characters. I'm also creating my own matrix math library to go along with it, 
+    mostly just to practice my linear algebra skills and get a deeper understanding of the math
+    I've been using all the time in my other graphics projects.
+  </p>
+  <p class="left-align"><a class="list-link" href="https://github.com/allisonrenie/ascii_render">Main repo</a></p>
+  <p class="left-align"><a class="list-link" href="https://github.com/allisonrenie/matrix_lib">Matrix math repo</a></p>
+
+  <p id="blog-entry-title">July 2nd 2023</p>
+  <p id="blog-entry">Not my first day working on this project (started it a couple weeks ago), but my first 
+    blog post about it. Currently it can render an OBJ file's points and rotate the 
+    object using my own matrix math (so basically I have a spinning teapot!). I'm having a lot of fun learning more about Rust. Some next to dos include
+    updating the matrix library to use 4x4 matrices instead of 3x3-- I know I should have done this from the start, 
+    but I was thinking I could just do transformations with vector multiplication (which works of course)... which I 
+    now realize is way less intuitive and easy to work with. 
+  </p>
+  <img class="blog-img" src="assets/jul2.png" alt="Picture of terminal">
 
   <!-- Link back to main page -->
   <p></p>
   <a class="menu-link" href="index.html">Back home</a>
+  <hr class="horizontal-line">
 
 </html>
