--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
 
       <div class="menu-item">
-        <a class="menu-link" href="ART_resume_june23.pdf">Resume</a>
+        <a class="menu-link" href="assets/ART_resume_june23.pdf">Resume</a>
       </div>
 
       <div class="menu-item">
